Open source direct connectivity implementation (#94)
Open source direct connectivity implementation